--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,13 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><font color=#555555><font size=6> FIRST AND MORE  IMPORTANT TITLE </font> <br> <br>\n",
+    "<center><font color=#555555><font size=6> Lab 1 : Market Microstructure  </font> <br> <br>\n",
     "    \n",
-    "<center><font color=#555555><font size=5> Name of the program </font> <br> <br> <br> <br>\n",
+    "<center><font color=#555555><font size=5> QA of market microstructure for a crypto-asset market </font> <br> <br> <br> <br>\n",
     "\n",
-    "<center><font color=#555555><font size=6> Title, full name, email of author(s) </font> <br> <br>\n",
+    "<center><font color=#555555><font size=3> A quantitative analysis of the market microstructure for a crypto-asset market, for a particular period of time given the provided data.\n",
+    "\n",
+    "Author: Marco Antonio Sánchez Covarrubias: if720268@iteso.mx\n",
+    " </font> <br> <br>\n",
     "   \n",
-    "<center> <font color= #555555> <font size = 4> Month.Year </a> | <font color= #555555> <font size = 4> Repository: <a href='https://github.com/'>Link</a></font>"
+    "<center> <font color= #555555> <font size = 3> June.2022. </a> | <font color= #555555> <font size = 3> Repository: <a href=https://github.com/MarcoSC08/myst-masc-lab1>Link</a></font>"
    ]
   },
   {
@@ -31,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <font color= #555555> <font size = 6> Main Title of the Work 1 </font> <br> <br> <font color= #555555> <font size = 5> Some interesting subtitle for your work  </font>"
+    "<center> <font color= #555555> <font size = 6> Crypto-market microstructure </font> <br> <br> <font color= #555555> <font size = 5> Data analysis in orderbook metrics and public trades  </font>"
    ]
   },
   {
@@ -59,7 +62,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color= #6B6B6B> <font size = 3>  Include here a description of the whole work, use no more than 400 words, you can use **Bold** and *Italic* highlights, also you can inclue [links](www.iteso.mx). Usually is a good strategy to generate this text at the very end of the process, since you have to include all aspects of the work, from a brief introduction, to problem definitions and methods used, to finally the results found. </font>"
+    "<font color= #6B6B6B> <font size = 3>  A quantitative analysis of the market microstructure for a crypto-asset market, for a particular period of time given the provided data.\n",
+    "Calculate OrderBook metrics\n",
+    "Codes\n",
+    "Calculate PublicTrades metrics\n",
+    "Codes\n",
+    "Implement Codes for the plots\n",
+    "OrderBook horizontal plot\n",
+    "PublicTrades price + volume time series plot\n",
+    "</font>"
    ]
   },
   {
